添加restful业务标识注解
Signed-off-by: procsl <program_chen@foxmail.com>